# music-player

./: README.md  index.html  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  tailwind.config.js  vite.config.js
public/: index.html  output.css
src/: App.jsx  App.svelte  App.tsx  app.html  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api.rs  lib.rs  main.rs
src/assets/: input.css  output.css
src/assets/css/: output.css
src/assets/js/: utilities.js
src/components/: Track.jsx  Track.tsx  WindowBar.jsx  WindowBar.tsx  index.js
src/components/audio_controls/: AddTrack.jsx  AddTrack.tsx  NextTrack.jsx  NextTrack.tsx  PlayPauseTrack.jsx  PlayPauseTrack.tsx  PreviousTrack.jsx  PreviousTrack.tsx  Repeat.jsx  Repeat.tsx  ShuffleTrack.jsx  ShuffleTrack.tsx  Volume.jsx  Volume.tsx  index.js
src/helpers/: index.tsx
src/lib/: Track.svelte
src/lib/audio_controls/: AddTrack.svelte  NextTrack.svelte  PlayPauseTrack.svelte  PreviousTrack.svelte  Repeat.svelte  ShuffleTrack.svelte  Volume.svelte
src/lib/icons/: Icon.svelte
src/lib/stores/: music.js
src/routes/: +layout.js  +page.svelte
